--- a/app/src/main/res/layout/investigation_case_fragment.xml
+++ b/app/src/main/res/layout/investigation_case_fragment.xml
@@ -19,12 +19,15 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <EditText
+        <com.my.app20160518.view.CleanableEditText
+            android:drawableRight="@drawable/yjh_del_circle"
             android:id="@+id/editText_case_InvestigationCaseFragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content" />
 
+        <!--#00000000后面两个零表示透明-->
         <com.my.app20160518.view.XListView
+            android:divider="#00000000"
             android:id="@+id/xListView_case_InvestigationCaseFragment"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
