--- a/app/src/main/res/layout/bank_fragment.xml
+++ b/app/src/main/res/layout/bank_fragment.xml
@@ -2,8 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="#D1D1D1">
+    android:orientation="vertical">
 
     <ListView
         android:divider="#00000000"
