--- a/app/src/main/res/layout/investigation_case_fragment_item.xml
+++ b/app/src/main/res/layout/investigation_case_fragment_item.xml
@@ -5,12 +5,13 @@
     android:orientation="vertical">
 
     <RelativeLayout
-        android:layout_marginBottom="10dp"
-        android:layout_marginRight="10dp"
-        android:layout_marginLeft="10dp"
-        android:background="@drawable/yjh_biankuang_investigation_case_fragment_item"
+        android:id="@+id/rl_investigation_case_fragment_item"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/yjh_biankuang_investigation_case_fragment_item"
         android:orientation="vertical">
 
         <ImageView
@@ -28,6 +29,7 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="5dp"
             android:src="@drawable/yjh_right_arrow" />
+
 
         <TextView
             android:id="@+id/tv_name_investigation_case_fragment_item"
@@ -65,6 +67,16 @@
             android:text="立案日期：2015-6-1"
             android:textColor="#969696"
             android:textSize="15sp" />
+
+        <!--android:visibility="invisible"-->
+        <ImageView
+            android:layout_width="23dp"
+            android:layout_height="23dp"
+            android:layout_alignBottom="@id/tv_time_investigation_case_fragment_item"
+            android:layout_alignParentRight="true"
+            android:layout_marginBottom="5dp"
+            android:layout_marginRight="5dp"
+            android:src="@drawable/yjh_new_msg" />
 
     </RelativeLayout>
 
